WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
98987
ElementAttributeData shouldn't be managing Element's callbacks.
https://bugs.webkit.org/show_bug.cgi?id=98987
Summary
ElementAttributeData shouldn't be managing Element's callbacks.
Andreas Kling
Reported
2012-10-10 20:57:02 PDT
ElementAttributeData shouldn't be managing Element's callbacks.
Attachments
poch
(12.73 KB, patch)
2012-10-10 21:35 PDT
,
Andreas Kling
andersca
: review+
Details
Formatted Diff
Diff
Rebasereded
(12.82 KB, patch)
2012-10-10 23:07 PDT
,
Andreas Kling
webkit.review.bot
: commit-queue-
Details
Formatted Diff
Diff
sigh
(12.75 KB, patch)
2012-10-11 12:29 PDT
,
Andreas Kling
no flags
Details
Formatted Diff
Diff
please merge?
(12.70 KB, patch)
2012-10-11 14:06 PDT
,
Andreas Kling
no flags
Details
Formatted Diff
Diff
Show Obsolete
(3)
View All
Add attachment
proposed patch, testcase, etc.
Andreas Kling
Comment 1
2012-10-10 21:35:59 PDT
Created
attachment 168140
[details]
poch
Anders Carlsson
Comment 2
2012-10-10 21:37:21 PDT
is gud poch!
Andreas Kling
Comment 3
2012-10-10 21:38:29 PDT
(In reply to
comment #2
)
> is gud poch!
anders pls
Andreas Kling
Comment 4
2012-10-10 23:07:37 PDT
Created
attachment 168146
[details]
Rebasereded
WebKit Review Bot
Comment 5
2012-10-10 23:57:28 PDT
Comment on
attachment 168146
[details]
Rebasereded
Attachment 168146
[details]
did not pass chromium-ews (chromium-xvfb): Output:
http://queues.webkit.org/results/14250631
New failing tests: dom/html/level1/core/hc_elementremoveattribute.html dom/html/level1/core/hc_elementremoveattributenode.html dom/xhtml/level1/core/hc_attrappendchild1.xhtml dom/html/level1/core/hc_attrchildnodes2.html dom/html/level1/core/hc_attrcreatetextnode2.html dom/html/level1/core/hc_attrappendchild1.html dom/html/level1/core/hc_attrappendchild3.html dom/xhtml/level1/core/hc_attrappendchild5.xhtml dom/html/level1/core/hc_attrinsertbefore1.html dom/html/level1/core/hc_attrinsertbefore3.html dom/html/level1/core/hc_attrinsertbefore2.html dom/html/level1/core/hc_attrreplacechild1.html dom/html/level1/core/hc_attrreplacechild2.html dom/xhtml/level1/core/hc_attrcreatetextnode2.xhtml dom/html/level1/core/hc_attrinsertbefore6.html dom/html/level1/core/hc_attrappendchild5.html dom/html/level1/core/hc_elementnormalize2.html dom/html/level1/core/hc_attrsetvalue2.html dom/html/level1/core/hc_attrinsertbefore4.html dom/xhtml/level1/core/hc_attrchildnodes2.xhtml dom/html/level1/core/hc_attrnormalize.html dom/html/level1/core/hc_attrsetvalue1.html accessibility/aria-hidden-updates-alldescendants.html dom/xhtml/level1/core/hc_attrappendchild3.xhtml dom/html/level1/core/hc_attrremovechild1.html dom/xhtml/level1/core/hc_attrclonenode1.xhtml canvas/philip/tests/size.attributes.removed.html dom/html/level1/core/hc_namednodemapremovenameditem.html dom/html/level1/core/hc_attrclonenode1.html dom/html/level1/core/hc_attrcreatetextnode.html
Andreas Kling
Comment 6
2012-10-11 12:29:15 PDT
Created
attachment 168259
[details]
sigh
Andreas Kling
Comment 7
2012-10-11 14:06:27 PDT
Created
attachment 168274
[details]
please merge?
WebKit Review Bot
Comment 8
2012-10-11 15:51:34 PDT
Comment on
attachment 168274
[details]
please merge? Clearing flags on attachment: 168274 Committed
r131104
: <
http://trac.webkit.org/changeset/131104
>
WebKit Review Bot
Comment 9
2012-10-11 15:51:38 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug