ElementAttributeData shouldn't be managing Element's callbacks. <http://webkit.org/b/98987>

Reviewed by Anders Carlsson.

Dispatch the following attribute-related Element callbacks from within Element
instead of ElementAttributeData. Also made them private.

    - willModifyAttribute
    - didModifyAttribute
    - didAddAttribute
    - didRemoveAttribute

No behavior change, just making ElementAttributeData a bit dumber (a good thing.)

* dom/Element.cpp:
(WebCore::Element::detachAttribute):
(WebCore::Element::removeAttribute):
(WebCore::Element::setAttributeInternal):
(WebCore::Element::removeAttributeInternal):
(WebCore::Element::addAttributeInternal):
* dom/Element.h:
* dom/ElementAttributeData.cpp:
(WebCore::ElementAttributeData::addAttribute):
(WebCore::ElementAttributeData::removeAttribute):
* dom/ElementAttributeData.h:


Canonical link: https://commits.webkit.org/117074@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@131104 268f45cc-cd09-0410-ab3c-d52691b4dbfc